chore: modernize backend and frontend toolchains