@@ -5,34 +5,35 @@ import com.baomidou.mybatisplus.core.toolkit.StringUtils;
 import com.wzh.blog.dto.ArticleSearchDTO;
 import com.wzh.blog.strategy.SearchStrategy;
 import lombok.extern.log4j.Log4j2;
-import org.elasticsearch.index.query.BoolQueryBuilder;
-import org.elasticsearch.index.query.QueryBuilders;
-import org.elasticsearch.search.fetch.subphase.highlight.HighlightBuilder;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.elasticsearch.core.ElasticsearchRestTemplate;
+import org.springframework.data.elasticsearch.client.elc.ElasticsearchTemplate;
+import org.springframework.data.elasticsearch.client.elc.NativeQuery;
 import org.springframework.data.elasticsearch.core.SearchHits;
-import org.springframework.data.elasticsearch.core.query.NativeSearchQueryBuilder;
+import org.springframework.data.elasticsearch.core.query.HighlightQuery;
+import org.springframework.data.elasticsearch.core.query.highlight.Highlight;
+import org.springframework.data.elasticsearch.core.query.highlight.HighlightField;
+import org.springframework.data.elasticsearch.core.query.highlight.HighlightFieldParameters;
+import org.springframework.data.elasticsearch.core.query.highlight.HighlightParameters;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import static com.wzh.blog.constant.CommonConst.*;
+import static com.wzh.blog.constant.CommonConst.FALSE;
+import static com.wzh.blog.constant.CommonConst.POST_TAG;
+import static com.wzh.blog.constant.CommonConst.PRE_TAG;
 import static com.wzh.blog.enums.ArticleStatusEnum.PUBLIC;
 
-/**
- * es搜索策略实现
- *
- * @author yezhiqiu
- * @date 2021/07/27
- */
+/** Elasticsearch 8/9 search implementation using the ELC client. */
 @Log4j2
 @Service("esSearchStrategyImpl")
 public class EsSearchStrategyImpl implements SearchStrategy {
 
-    @Autowired
-    private ElasticsearchRestTemplate elasticsearchRestTemplate;
+    private final ElasticsearchTemplate elasticsearchTemplate;
+
+    public EsSearchStrategyImpl(ElasticsearchTemplate elasticsearchTemplate) {
+        this.elasticsearchTemplate = elasticsearchTemplate;
+    }
 
     @Override
     public List<ArticleSearchDTO> searchArticle(String keywords) {
@@ -42,65 +43,49 @@ public class EsSearchStrategyImpl implements SearchStrategy {
         return search(buildQuery(keywords));
     }
 
-    /**
-     * 搜索文章构造
-     *
-     * @param keywords 关键字
-     * @return es条件构造器
-     */
-    private NativeSearchQueryBuilder buildQuery(String keywords) {
-        // 条件构造器
-        NativeSearchQueryBuilder nativeSearchQueryBuilder = new NativeSearchQueryBuilder();
-        BoolQueryBuilder boolQueryBuilder = QueryBuilders.boolQuery();
-        // 根据关键词搜索文章标题或内容
-        boolQueryBuilder.must(QueryBuilders.boolQuery().should(QueryBuilders.matchQuery("articleTitle", keywords))
-                        .should(QueryBuilders.matchQuery("articleContent", keywords)))
-                .must(QueryBuilders.termQuery("isDelete", FALSE))
-                .must(QueryBuilders.termQuery("status", PUBLIC.getStatus()));
-        nativeSearchQueryBuilder.withQuery(boolQueryBuilder);
-        return nativeSearchQueryBuilder;
+    private NativeQuery buildQuery(String keywords) {
+        Highlight highlight = new Highlight(
+                HighlightParameters.builder()
+                        .withPreTags(PRE_TAG)
+                        .withPostTags(POST_TAG)
+                        .build(),
+                List.of(
+                        new HighlightField("articleTitle"),
+                        new HighlightField("articleContent", HighlightFieldParameters.builder()
+                                .withFragmentSize(200)
+                                .build())));
+
+        return NativeQuery.builder()
+                .withQuery(query -> query.bool(bool -> bool
+                        .must(must -> must.bool(queryBool -> queryBool
+                                .should(should -> should.match(match -> match.field("articleTitle").query(keywords)))
+                                .should(should -> should.match(match -> match.field("articleContent").query(keywords)))))
+                        .must(must -> must.term(term -> term.field("isDelete")
+                                .value(value -> value.longValue((long) FALSE))))
+                        .must(must -> must.term(term -> term.field("status")
+                                .value(value -> value.longValue(PUBLIC.getStatus().longValue()))))))
+                .withHighlightQuery(new HighlightQuery(highlight, ArticleSearchDTO.class))
+                .build();
     }
 
-    /**
-     * 文章搜索结果高亮
-     *
-     * @param nativeSearchQueryBuilder es条件构造器
-     * @return 搜索结果
-     */
-    private List<ArticleSearchDTO> search(NativeSearchQueryBuilder nativeSearchQueryBuilder) {
-        // 添加文章标题高亮
-        HighlightBuilder.Field titleField = new HighlightBuilder.Field("articleTitle");
-        titleField.preTags(PRE_TAG);
-        titleField.postTags(POST_TAG);
-        // 添加文章内容高亮
-        HighlightBuilder.Field contentField = new HighlightBuilder.Field("articleContent");
-        contentField.preTags(PRE_TAG);
-        contentField.postTags(POST_TAG);
-        contentField.fragmentSize(200);
-        nativeSearchQueryBuilder.withHighlightFields(titleField, contentField);
-        // 搜索
+    private List<ArticleSearchDTO> search(NativeQuery query) {
         try {
-            SearchHits<ArticleSearchDTO> search = elasticsearchRestTemplate.search(nativeSearchQueryBuilder.build(), ArticleSearchDTO.class);
-            return search.getSearchHits().stream().map(hit -> {
+            SearchHits<ArticleSearchDTO> searchHits = elasticsearchTemplate.search(query, ArticleSearchDTO.class);
+            return searchHits.getSearchHits().stream().map(hit -> {
                 ArticleSearchDTO article = hit.getContent();
-                // 获取文章标题高亮数据
-                List<String> titleHighLightList = hit.getHighlightFields().get("articleTitle");
-                if (CollectionUtils.isNotEmpty(titleHighLightList)) {
-                    // 替换标题数据
-                    article.setArticleTitle(titleHighLightList.get(0));
+                List<String> titleHighlights = hit.getHighlightFields().get("articleTitle");
+                if (CollectionUtils.isNotEmpty(titleHighlights)) {
+                    article.setArticleTitle(titleHighlights.getFirst());
                 }
-                // 获取文章内容高亮数据
-                List<String> contentHighLightList = hit.getHighlightFields().get("articleContent");
-                if (CollectionUtils.isNotEmpty(contentHighLightList)) {
-                    // 替换内容数据
-                    article.setArticleContent(contentHighLightList.get(contentHighLightList.size() - 1));
+                List<String> contentHighlights = hit.getHighlightFields().get("articleContent");
+                if (CollectionUtils.isNotEmpty(contentHighlights)) {
+                    article.setArticleContent(contentHighlights.getLast());
                 }
                 return article;
             }).collect(Collectors.toList());
-        } catch (Exception e) {
-            log.error(e.getMessage());
+        } catch (Exception exception) {
+            log.error("Elasticsearch article search failed", exception);
+            return new ArrayList<>();
         }
-        return new ArrayList<>();
     }
-
 }
